--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   url: "http://www.jacoporabolini.com"
 
 # Build settings
-baseurl: /blog2 # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: /Blog2 # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
